# ThePahestor_by_EvoQ

./: .gitignore  README.md  azure-pipeline.yml  pyproject.toml
